syntax = "proto3";
//package example.myapp.helloworld;

package greeter;

//option java_package = "example.myapp.helloworld.grpc";
//option java_multiple_files = true;
//option java_package = "example.myapp.helloworld.grpc";
//option java_outer_classname = "HelloWorldProto";

service GreetingService {

  rpc SayHello(HelloRequest) returns (HelloReply) {}

  rpc ItKeepsTalking (stream HelloRequest) returns (HelloReply) {}

  rpc ItKeepsReplying (HelloRequest) returns (stream HelloReply){}

  rpc SayHellos (stream HelloRequest) returns (stream HelloReply){}

}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
